Worked on aletter-typed template - fixed the gap below the signature

--- a/aletter-typed/css/main.css
+++ b/aletter-typed/css/main.css
@@ -157,7 +157,7 @@ span.campaign {
   width: 330px;
   color: rgba(0,0,128,1);
   position: absolute;
-  top: -2px;
+  top: -16px;
   left: 0px;
   font-family: biro_script_standard_us;
   font-weight: bold;
